--- a/app/src/main/res/layout/performance_view_layout.xml
+++ b/app/src/main/res/layout/performance_view_layout.xml
@@ -55,7 +55,7 @@
         android:id="@+id/finish_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Finish"
+        android:text="Thank You For Your Support!!"
         android:layout_marginTop="16dp"/>
 
 </LinearLayout>
